--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - 3306:3306
     volumes:
       - ./infra/mysql/data:/var/lib/mysql
+      - ./infra/mysql/entorypoint:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_DATABASE=kenshudb
       - MYSQL_USER=kenshu
