--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -10,6 +10,7 @@ server {
     add_header X-Content-Type-Options "nosniff";
 
     index index.html index.htm index.php;
+    client_max_body_size 10M;
 
     charset utf-8;
 
