--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-20.04
-    
+
     steps:
     - name: connect & deploy
       env:
@@ -16,4 +16,4 @@ jobs:
       run:
         echo "$SECRET_KEY" > secret_key
         chmod 600 secret_key
-        ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "sh deploy.sh"
+        ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "sh ~/deploy.sh"
