--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,6 @@ jobs:
         EC2_USER: ${{ secrets.EC2_USER }}
         EC2_HOST: ${{ secrets.EC2_HOST }}
       run: |
-        echo $SECRET_KEY > secret_key &&
-        chmod 600 secret_key &&
+        echo $SECRET_KEY > secret_key
+        chmod 600 secret_key
         ssh -o StrictHostKeyChecking=no -i secret_key ${EC2_USER}@${EC2_HOST} "cd ~/kenshu-backend-laravel && git pull && sudo cp -r /home/ubuntu/kenshu-backend-laravel/backend/* /var/www/html"
