--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - name: Output SECRET_KEY
-      run: |
-        echo $SECRET_KEY > secret_key
-        
-    - name: Change permission
-      run: |
-        chmod 600 secret_key
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v1
+      with:
+        key: ${{ secrets.SECRET_KEY }} 
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
-    - name: Deploy
-      run: |
-        ssh -o StrictHostKeyChecking=no -i secret_key ${EC2_USER}@${EC2_HOST} "cd ~/kenshu-backend-laravel && git pull && sudo cp -r /home/ubuntu/kenshu-backend-laravel/backend/* /var/www/html"
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+    - name: Deploy Action
+      run: bash deploy.sh
