--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v1
       with:
-        key: ${{ secrets.SECRET_KEY }} 
+        private-key: ${{ secrets.SECRET_KEY }} 
         known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
     - name: Adding Known Hosts
