--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to EC2  
 on:
   push:
-    branches: [ main ]
+    branches: [ main, github-actions ]
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
@@ -23,4 +23,4 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy Action
-      run: ls
+      run: ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/kenshu-backend-laravel && git pull"
