--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,24 +3,23 @@ on:
   push:
     branches: [ main, github-actions ]
 
-env:
-  SECRET_KEY: ${{ secrets.SECRET_KEY }}
-  EC2_USER: ${{ secrets.EC2_USER }}
-  EC2_HOST: ${{ secrets.EC2_HOST }}
-
 jobs:
   deploy:
     runs-on: ubuntu-20.04
 
     steps:
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v1
-      with:
-        private-key: ${{ secrets.SECRET_KEY }} 
-        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: Output SECRET_KEY
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        EC2_USER: ${{ secrets.EC2_USER }}
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+      run: |
+        echo $SECRET_KEY > secret_key
+        
+    - name: Change permission
+      run: |
+        chmod 600 secret_key
 
-    - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
-
-    - name: Deploy Action
-      run: ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/kenshu-backend-laravel && git pull"
+    - name: Deploy
+      run: |
+        ssh -o StrictHostKeyChecking=no -i secret_key ${EC2_USER}@${EC2_HOST} "cd ~/kenshu-backend-laravel && git pull && sudo cp -r /home/ubuntu/kenshu-backend-laravel/backend/* /var/www/html"
