--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - name: Output SECRET_KEY
       run: |
-        echo $SECRET_KEY > secret_key
+        echo ${SECRET_KEY} > secret_key
         
     - name: Change permission
       run: |
