--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v2
     - name: Output SECRET_KEY
       run: |
-        echo ${SECRET_KEY} > secret_key
+        echo "$SECRET_KEY" > secret_key
         
     - name: Change permission
       run: |
