--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to EC2  
 on:
   push:
-    branches: [ main, github-actions ]
+    branches: [ main ]
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
