--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "backend/database/migrations"
+      - "backend/database/migrations/**"
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
