--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "backend/*"
+      - "backend/**"
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
