--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2  
+name: Migrate CI
 on:
   push:
     branches: [ main ]
@@ -11,7 +11,7 @@ env:
   EC2_HOST: ${{ secrets.EC2_HOST }}
 
 jobs:
-  deploy:
+  migrate:
     runs-on: ubuntu-20.04
 
     steps:
@@ -23,6 +23,6 @@ jobs:
       run: |
         chmod 600 secret_key
 
-    - name: Deploy
+    - name: Migrate
       run: |
         ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${EC2_USER}@${EC2_HOST} -i secret_key "sh ~/github-actions-sh/migrate.sh"
