--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -1,7 +1,8 @@
 name: Migrate CI
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - "backend/database/migrations/**"
 
