--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - "backend/**"
+      - "backend/**/*"
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
