--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - "backend/database/migrations/**"
+      - "backend/database/migrations/**/*"
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
